Xtheme: fix editor menu for mobile devices
The iframe was not working properly on mobile devices.
When the menu is opened and user tries to scroll the menu, the entire page was being scrolled instead of just the iframe.
This was fixed by wrapping the iframe inside a relative positioned div.

Another solved issue was the size of the editor for mobile devices. The width of the editor was 450px but didn't
fit on small devices like iPhones. The editor will now expand to 100% and it will be cropped at 450px.

The editor toggler button was also fixed for small screens by showing it over the editor, at the very bottom,
when screen sizes are smaller than 560px (the toggle button width + editor iframe width).

Refs POS-2506

--- a/shuup/xtheme/static_src/injection/editor-injection.less
+++ b/shuup/xtheme/static_src/injection/editor-injection.less
@@ -82,55 +82,84 @@
     }
 }
 
+#xt-sidebar-toggler {
+    font-family: 'Open Sans', sans-serif;
+    padding: 6px 12px;
+    background: #fff;
+    text-align: center;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    font-weight: bold;
+    color: @color-blue;
+    cursor: pointer;
+    box-shadow: 2px 0 2px 0 rgba(0, 0, 0, 0.05);
+    white-space: nowrap;
+    font-size: 12px;
+
+    position: fixed;
+    z-index: 9999999;
+    left: 0;
+    bottom: 1.5rem;
+    transform: translateX(0px);
+    transition: transform 0.5s;
+
+    i {
+        margin-right: 5px;
+        &:before {
+            content:  "\f101";
+        }
+    }
+
+    @media (max-width: 560px) {
+        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.05);
+    }
+
+    &.visible {
+        @media (min-width: 560px) {
+            transform: translateX(450px);
+            z-index: 999998;
+        }
+
+        i:before {
+            content: "\f100";
+        }
+    }
+}
+
 #xt-edit-sidebar {
     font-family: 'Open Sans', sans-serif;
     position: fixed;
     z-index: 999999; // Can we go higher?
     left: 0;
     top: 0;
-    bottom: 0px;
-    width: 450px;
+    max-width: 450px;
+    width: 100%;
+    height: 100%;
     transform: translateX(-100%) translateZ(0);  // translateZ to force composition layer
     transition: transform 0.5s;
     background: #fff;
     box-shadow: 0px 0 4px 0 rgba(0, 0, 0, 0.15);
+    overflow: hidden;
 
     &.visible {
         transform: translateX(0%);
-        .xt-sidebar-toggler i:before {
-            content: "\f100";
-        }
     }
-    iframe {
-        position: absolute;
-        border: 0;
-        left: 0;
-        top: 0;
-        width: 100%;
+
+    @media (max-width: 560px) {
+        padding-bottom: 5rem;
+        max-width: 100%;
+    }
+
+    #xt-edit-sidebar-container {
+        -webkit-overflow-scrolling: touch;
+        overflow-y: auto;
+        position: relative;
         height: 100%;
-        border-bottom: 1px solid #ddd;
-    }
-    .xt-sidebar-toggler {
-        position: fixed;
-        left: 100%;
-        bottom: 1rem;
-        padding: 6px 12px;
-        background: #fff;
-        text-align: center;
-        z-index: 10;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-        font-weight: bold;
-        color: @color-blue;
-        cursor: pointer;
-        box-shadow: 2px 0 2px 0 rgba(0, 0, 0, 0.05);
-        white-space: nowrap;
-        font-size: 12px;
-        i {
-            margin-right: 5px;
-            &:before {
-                content:  "\f101";
-            }
+
+        iframe {
+            width: 100%;
+            height: 99%; // yes, 99% to prevent parent from scrolling in some buggy browsers
+            border: none;
         }
     }
 }
